# structbuilder_derive

./: Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs
structbuilder_derive/: Cargo.toml
tests/: test_derive.rs  test_generics.rs  test_generics_multiple.rs  test_lifetimes.rs
