[package]
name = "structbuilder_derive"
version = "0.1.0"
authors = ["Reid Swan <reidswan@outlook.com>"]
edition = "2018"
description = "Super simple macro to derive a builder trait for your struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full"] }
quote = "^1.0"