[package]
name = "structbuilder_derive"
version = "0.2.0"
authors = ["Reid Swan <reidswan@outlook.com>"]
edition = "2018"
description = "Super simple macro to derive a builder trait for your struct"
repository = "https://github.com/reidswan/structbuilder_derive"
homepage = "https://github.com/reidswan/structbuilder_derive"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full"] }
quote = "^1.0"